--- a/styles/main.css
+++ b/styles/main.css
@@ -74,6 +74,12 @@ button {
 .header-phone-wrap {
     display: flex;
     column-gap: 20px;
+    align-items: center;
+}
+
+.phone-img {
+    display: flex;
+    align-items: center;
 }
 
 
@@ -107,6 +113,11 @@ button {
     align-items: center;
 }
 
+.open-img {
+    display: flex;
+    align-items: center;
+}
+
 
 .enter-a {
     font-family: var(--primary-font);
@@ -118,7 +129,7 @@ button {
 
 .header-bottom-wrap {
     background: #0F0F0F;
-    padding: 19px 0;
+    padding: 26px 0;
 
 }
 
@@ -126,11 +137,15 @@ button {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 15px;
+}
+
+.site-logo {
+    display: flex;
 }
 
 .header-list {
     display: flex;
+    align-items: center;
 
 }
 
@@ -164,7 +179,7 @@ button {
 
 .porten {
 
-    background: url(../img/background-img.png);
+    background: url(../img/background-img.png) no-repeat center/cover; 
     height: 810px;
 }
 
@@ -181,6 +196,7 @@ button {
     flex-direction: column;
     align-items: center;
     height: 100%;
+    justify-content: center;
 }
 
 .porten-box {
@@ -279,7 +295,8 @@ button {
 .sezon-right {
     background: url(../img/background-img2.png);
     height: 730px;
-    width: 880px;
+    max-width: 880px;
+    width: 100%;
 }
 
 .right-wrapper {
@@ -398,6 +415,8 @@ button {
     padding: 55px 22px;
     margin-top: 50px;
     margin-bottom: 25px;
+    display: flex;
+    justify-content: center;
 }
 
 .new-subtitle {
