--- a/styles/breakpoints.css
+++ b/styles/breakpoints.css
@@ -83,9 +83,7 @@
         flex-wrap: wrap;
     }
 
-    .footer-upper {
-        height: 900px !important;
-    }
+    
 
     .footer-shop {
         margin-top: 30px;
@@ -146,6 +144,10 @@
 
     .enter-a {
         display: none !important;
+    }
+
+    .sezon-left {
+        padding: 0 20px;
     }
 
     .header-nav {
@@ -259,8 +261,6 @@
     
 
     .footer-a-wrap {
-        display: flex;
-        overflow-x: scroll;
     }
 
     .footer-shop {
@@ -278,13 +278,18 @@
     }
 
     .footer-upper {
-        height: 900px !important;
     }
     .mail-wrap {
         display: flex;
         flex-direction: column;
         row-gap: 20px;
         justify-content: start !important;
+    }
+
+    .footer-btn-wrap {
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
     }
 
 
